k8s/minikube/02-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: fastapi
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        imagePullPolicy: Always
        ports:
        - name: redis-port
          containerPort: 6379
        startupProbe:
          tcpSocket:
            port: redis-port
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 10
        livenessProbe:
          tcpSocket:
            port: redis-port
          initialDelaySeconds: 15
          periodSeconds: 10
  replicas: 1
