k8s/minikube/03-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: fastapi
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
